--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-      <script type="text/javascript" src="curve.min.js"></script>
+   
     <style>
       body {
         margin: 0px;
@@ -605,7 +605,7 @@
         context.beginPath();
         
         // optionally move to first point
-        context.curve(arrK, 0.45,50,true);  
+       // context.curve(arrK, 0.45,50,true);  
         // add cardinal spline to path
         context.closePath();
         context.fillStyle='#8ED6FF';
